--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,12 @@
             <version>1.18.20</version>
         </dependency>
 
+        <!-- *** Json updater Important ***-->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
     </dependencies>
 </project>
